# qualified-extraction

./: .gitignore  README.md  RUST_MIGRATION.md  SETUP.md  UNIFFI_INTEGRATION.md  XCODE_INTEGRATION.md  build_rust.sh  extract.py  generate_swift_bindings.sh  run.sh  stat-page.py  stat-page.sh  stats.html  stats.py  stats.sh  test_extraction.sh  todo.md  tweet.md
QualifiedApp/: QUICKSTART.md  README.md
QualifiedApp/QualifiedApp/: BrowserDetailSheet.swift  BrowserTab.swift  ContentView.swift  DataExtractor.swift  DatabaseManager.swift  DatabaseService.swift  Info.plist  MessagesDetailSheet.swift  MessagesTab.swift  OverviewTab.swift  QualifiedApp.entitlements  QualifiedAppApp.swift  QuantifiedCore.swift  StatsViewModel.swift
QualifiedApp/QualifiedApp.xcodeproj/: project.pbxproj
QualifiedApp/QualifiedApp/Views/: BrowserDetailSheet.swift  BrowserTab.swift  DashboardView.swift  DatabaseService.swift  DateRangePicker.swift  (+4 more)
collectors/: __init__.py  base.py  knowledgec.py  messages.py
python-cli/: requirements.txt  stats.py
python-cli/.venv_tmp/: pyvenv.cfg
python-cli/src/: __init__.py
python-cli/venv 2/: pyvenv.cfg
quantified-core/: Cargo.toml  README.md  SWIFT_INTEGRATION.md  build_and_generate.rs  generate_bindings.sh  uniffi.toml
quantified-core/src/: error.rs  lib.rs  quantified_core.udl  schema.rs  timestamp.rs  types.rs  uniffi_api.rs
quantified-core/src/collectors/: base.rs  chrome.rs  knowledgec.rs  messages.rs  mod.rs  podcasts.rs  utils.rs
scripts/: add_files_to_xcode.sh  add_to_xcode.py  remove_duplicate_files.py
src/extraction/: schema.py
(+8 files in other folders)
