[package]
name = "quantified-core"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"
chrono = "0.4"
shellexpand = "3.1"
uniffi = { version = "0.28", features = ["build"] }

[dev-dependencies]
tempfile = "3.0"

[lib]
name = "quantified_core"
path = "src/lib.rs"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "quantified-core"
path = "src/bin/cli.rs"
